Fixed buttons wrapping incorrectly

--- a/hectabitstyles.css
+++ b/hectabitstyles.css
@@ -17,6 +17,9 @@ a {
     font-size: 15px;
     border-radius: 10px;
     color: white;
+    min-width: 50px;
+    max-width: 100px;
+    display: inline-block;
 }
 
 .spacer {
